objects/Associated_Commodity__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Associated Commodities</relationshipLabel>
        <relationshipName>Associated_Commodities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commodity__c</fullName>
        <label>Commodity</label>
        <referenceTo>Commodity__c</referenceTo>
        <relationshipLabel>Associated Commodities</relationshipLabel>
        <relationshipName>Associated_Commodities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Growing__c</fullName>
        <label>Growing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Harvesting__c</fullName>
        <label>Harvesting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Holding__c</fullName>
        <label>Holding</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is used to capture whether Associated Commodity is Active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Associated Commodities</relationshipLabel>
        <relationshipName>Associated_Commodities</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Packing__c</fullName>
        <label>Packing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Processing__c</fullName>
        <label>Processing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail__c</fullName>
        <label>Retail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Associated Commodity</label>
    <nameField>
        <displayFormat>AC-{000000000}</displayFormat>
        <label>Associated Commodity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Commodities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>